flux/manifests/local-management/k8sdashboard/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: k8s-dashboard-vs
  namespace: istio-system
spec:
  hosts:
    - "dashboard.management.local"
  gateways:
    - istio-ingress-gateway-management
  http:
    - route:
        - destination:
            host: kubernetes-dashboard.kubernetes-dashboard.svc.cluster.local  # Check if this service name matches your Argo CD service
            port:
              number: 80
